# PolySight

./: .clinerules  .env.example  .gitignore  CLAUDE.md  LICENSE  PRD.md  README.md  architecture.md  config.example.json  implementation_plan.md  progress.md  pyproject.toml  references.txt  requirements.txt  test_mps.py
.claude/: cowork.md
backend/data/: vidore_loader.py
backend/mcp_server/: run.py  server.py
backend/mcp_server/tools/: comparison.py
backend/pipelines/: __init__.py  ingestion.py  text_engine.py  visual_engine.py
backend/utils/: config_manager.py  elastic_client.py
config/: config.yaml
docs/: KIBANA_SETUP.md
frontend/: app.py
tests/: test_mcp_server.py  test_pipelines.py  test_setup.py
